fixed icon not showing

--- a/src/universal.css
+++ b/src/universal.css
@@ -24,7 +24,7 @@ div {
   }
   
   
-  .topnav .icon {
+  .topnav .bars {
     display: none;
   }
   
